--- a/style.css
+++ b/style.css
@@ -1,7 +1,5 @@
-@font-face {
-    font-family: "Inter";
-    src: url(https://fonts.google.com/specimen/Inter);
-  }
+@import url('https://fonts.googleapis.com/css2? family= Inter:wght@100;200;300;400 & display=swap');
+
 body {
     margin: auto;
     padding: 0;
@@ -37,10 +35,11 @@ header nav ul li:hover {
 
 .firtSection {
   display: flex;
+  flex-wrap: wrap;
 }
 
 section .containerImg {
-  width: 80%;
+  width: 70%;
   margin: 10px 20px 10px 0;
  
 }
@@ -52,26 +51,120 @@ section .containerImg img {
 aside {
   background: #000;
   color: white;
-  width: 20%;
+  width: 30%;
   margin: 10px 0 0 20px;
 }
 
 aside div {
+    display: flex;
+    flex-direction: column;
+   justify-content: center;
     width: 80%;
     margin: auto;
+    padding: auto;
 }
 
-.containerH1 {
+aside div h1 {
+  font-size: 2rem;
+  color: rgb(232, 199, 9);
+}
+
+aside div hr {
+  width: 90%;
+
+}
+aside div p {
+  font-size: 14px;
+  line-height: 1.6em;
+  color: rgb(153, 153, 153);
+
+}
+.asideH2 {
+  font-size: 20px;
+  transition: 0.2s;
+  cursor: pointer;
+}
+.asideH2:hover {
+  color: rgb(232, 199, 9);
+}
+
+.container_h1_parag {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
   width: 100%;
-  margin: auto;
+ 
 }
 
-.containerH1 h1 {
+.container_h1  {
+  width: 50%;
+ 
+}
+
+.container_h1 h1 {
   font-size: 60px;
+ margin: 20px 20px 20px 0;
+  width: 100%;
+  
+}
+
+.containerParagButton {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 50%;
+  margin: 20px 0px 20px 0;
+}
+.containerParagButton p{
+  line-height: 1.5em;
+  font-size: 18px;
+  letter-spacing: 2px;
+}
+.containerParagButton button{
+  border: 0;
+  width: 50%; 
+  height: 40px;
+  padding: 0 20px;
+  font-size: 1.1rem;
+  text-align: center;
+  color: #fff;
+  background-color: rgb(234, 61, 42);
+  cursor: pointer;
+  transition: 0.3s;
+
+}
+
+.containerParagButton button:hover {
+  background-color: rgb(27, 27, 27);
+
 }
 .lasteSection{
   display: flex;
-  justify-content: space-between;
+  flex-wrap: wrap;
   margin-top: 20px;
+  width: 100%;
+   margin-top: 20px;
+}
+
+.card {
+  display: flex;
+  justify-content: s;
+  margin: 20px 20px 30px 0;
+  
+}
+.card img {
+  margin: 0;
+  padding: 0;
+
+}
+
+.containerText {
+  display: flex;
+  flex-direction: column;
+ padding: 10px;
+  margin: 0 0 0 20px;
+}
+.containerText h2 {
+  font-size: 2rem;
+  color: rgb(159, 157, 157);
 }
