--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2? family= Inter:wght@100;200;300;400 & display=swap');
+/* @import url('https://fonts.googleapis.com/css2? family= Inter:wght@100;200;300;400 & display=swap'); */
 
 body {
     margin: auto;
@@ -28,6 +28,9 @@ header nav ul li{
   font-size: 18px;
   cursor: pointer;
   transition: 0.3s;
+}
+.fa-bars {
+  visibility: hidden;
 }
 header nav ul li:hover {
   color: rgb(255, 142, 3);
@@ -146,6 +149,14 @@ aside div p {
 
 }
 @media (max-width: 1250px ) {
+  header nav ul{
+    display: none;
+  }
+  .fa-bars {
+    visibility: visible;
+    font-size: 30px;
+    cursor: pointer;
+  }
   section .containerImg{
     width: 100%;
   }
